--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "framer-motion": "^10.12.5-alpha.1",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
